--- a/src/client/index.css
+++ b/src/client/index.css
@@ -6,7 +6,7 @@ body {
   padding: 5px 10px;
   position: fixed;
   background-color: rgba(255, 0, 0, 0.1);
-  transition: all 0.8s;
+  transition: all 0.5s;
 }
 
 .inspector-info {
@@ -18,4 +18,22 @@ body {
   color: #000;
   left: 50%;
   transform: translate(-50%, -100%);
+}
+
+#inspector-overlay-checkbox-label {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
+
+#inspector-overlay-checkbox-label .label-text {
+  margin-left: 5px;
+}
+
+#inspector-overlay-checkbox-label input {
+  cursor: pointer;
 }
