--- a/src/client/index.css
+++ b/src/client/index.css
@@ -7,6 +7,7 @@ body {
   position: fixed;
   background-color: rgba(255, 0, 0, 0.1);
   transition: all 0.5s;
+  display: none;
 }
 
 .inspector-info {
